# klingel

./: MANIFEST.in  README.md  config.json  configwin.json  klingel.sh  rc.local  readme.txt  setup.cfg  start.bat  start.ps1  start.sh  start_all.sh  taster_daemon.py  web_app.py
camera/: camera.py  camera_pi.py
flaskr/: __init__.py  last.py  lists.py
flaskr/static/: style.css
flaskr/templates/: base.html  list.html  live.html  pic_list.html
klingel/: __init__.py  lists.py  live.py  settings.py
klingel/static/: smartphones.css  style.css
klingel/templates/: base.html  list.html  live.html  live_raw.html  pic_list.html  settings.html
livecam/: live_pic.py  mjpeg.sh
tasterd/: linphone.py  taster.py  tasterd.py  tasterd.service  tasterd_old.py
templates/: list.html
tests/: conftest.py  test_factory.py
