[metadata]
name = klingel
version = 0.0.1
url = n.a.
license = n.a. 
maintainer = JF
maintainer_email = n.a.
description = Operate a klingel
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    klingel
